# nnunet-cli

./: README.md  create_dataset_json.py  create_nnunet_folder_structure.py  create_splits.py  extract_3d_from_4d.py  extract_3d_from_4d_folder.py  extract_labels_from_segmentation.py  generate_nnunet_folder_for_dataset.py  pyproject.toml  validate_nnunet_dataset.py
nnunet_cli/: batch_extract_nifti_frames.py  create_dataset_json.py  create_nnunet_folder_structure.py  create_nnunet_folder_structure_multiple_iterations.py  create_splits.py  extract_3d_from_4d_nifti.py  extract_labels_from_segmentation.py  generate_nnunet_dataset.py  validate_nnunet_dataset.py
nnunet_cli/utils/: label_utils.py
tests/: conftest.py  test_batch_extract_nifti_frames.py  test_create_dataset_json.py  test_create_nnunet_folder_structure.py  test_create_splits.py  test_extract_3d_from_4d_nifti.py  test_extract_labels_from_segmentations.py  test_generate_nnunet_dataset.py  test_label_utils.py  test_validate_nnunet_dataset.py
