[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnunet_cli"
version = "0.1.0"
description = "CLI utilities for nnUNet segmentation/batch NIfTI frame extraction"
authors = [
   { name="Tricia Lobo", email="lobotr@seas.upenn.edu" }
]
dependencies = [
  "nibabel==5.3.2",
  "numpy==2.2.6",
  "pandas==2.3.1",
  "scikit-learn==1.7.1",
]

[project.scripts]
generate-nnunet-dataset = "nnunet_cli.generate_nnunet_dataset:main"
batch-extract-nifti-frames = "nnunet_cli.batch_extract_nifti_frames:main"

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "black==24.3.0",
  "nnunetv2"
]
